Changed the website

--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "aleecorp-website",
-  "version": "0.0.0",
-  "private": true,
+  "name": "alee-prod-website",
+  "version": "1.0.0",
+  "description": "A rewrite of the old aleecorp.github.io website",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app",
+    "dev": "nodemon app"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aleeproductions/website.git"
+  },
+  "author": "Alee",
+  "license": "GPL-3.0",
+  "bugs": {
+    "url": "https://github.com/aleeproductions/website/issues"
+  },
+  "homepage": "https://github.com/aleeproductions/website#readme",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "pug": "^2.0.4"
+    "ejs": "^2.6.2",
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
+    "webhook-discord": "^3.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
