--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "readline": "^1.3.0",
     "webhook-discord": "^3.2.0"
   },
   "devDependencies": {
