--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "moment": "^2.24.0",
     "readline": "^1.3.0",
+    "serve-favicon": "^2.5.0",
     "webhook-discord": "^3.2.0"
   },
   "devDependencies": {
