--- a/package.json
+++ b/package.json
@@ -18,9 +18,15 @@
   },
   "homepage": "https://github.com/aleeproductions/website#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "moment": "^2.24.0",
+    "mongoose": "^5.6.9",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "readline": "^1.3.0",
     "serve-favicon": "^2.5.0",
     "webhook-discord": "^3.2.0"
