--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
+    "fs": "0.0.1-security",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "passport": "^0.4.0",
