--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-local": "^1.0.0",
     "readline": "^1.3.0",
     "serve-favicon": "^2.5.0",
+    "smoothstate": "^0.7.2",
     "webhook-discord": "^3.2.0"
   },
   "devDependencies": {
