--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A rewrite of the old aleecorp.github.io website",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
-    "dev": "nodemon app"
+    "start": "concurrently \"node-sass public/css/style.scss -o public/css -w\", \"node app\"",
+    "dev": "concurrently \"node-sass public/css/style.scss -o public/css -w\", \"nodemon app\""
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/aleeproductions/website#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^4.1.1",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
@@ -26,6 +27,7 @@
     "fs": "0.0.1-security",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
+    "node-sass": "^4.12.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "readline": "^1.3.0",
