--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "eslint": "^6.7.2",
+    "eslint-plugin-react": "^7.17.0",
     "frontmatter-markdown-loader": "^3.1.0"
   }
 }
