--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^10.0.5",
+    "nextjs-redirect": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
